delete pages.coffee and testing bulma on styleguide

--- a/app/views/pages/styleguide.html.erb
+++ b/app/views/pages/styleguide.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#styleguide</h1>
-<p>Find me in app/views/pages/styleguide.html.erb</p>
+<div class="columns">
+
+  <div class="column"><h1>Pages#styleguide</h1></div>
+
+  <div class="column"><p>Find me in app/views/pages/styleguide.html.erb</p></div>
+
+</div>
